# gdbstub_cpp

./: .gitignore  CMakeLists.txt  README.md  test
bindings/capi/: README.md
bindings/capi/include/: gdbstub_cpp_c.h
bindings/capi/src/: gdbstub_cpp_c.cpp
bindings/dlang/: .gitignore
bindings/dlang/demo/: dub.sdl
bindings/dlang/demo/source/: app.d
bindings/dlang/e2e/: dub.sdl
bindings/dlang/e2e/source/: app.d
bindings/dlang/gdbstub_cpp-d/: README.md  dub.sdl
bindings/dlang/gdbstub_cpp-d/source/: gdbstub_cpp.d  gdbstub_cpp_c_api.d  gdbstub_cpp_test.d
cmake/: gdbstub-config.cmake.in
dlang/: .gitignore  dub.sdl
dlang/source/: app.d  gdbstub.d  mock_target.d
doc/: guide.md
doc/gdb_rsp/: architecture_specific_protocol_details.md  branch_trace_configuration_format.md  examples.md  file_i_o_remote_protocol_extension.md  general_query_packets.md  host_i_o_packets.md  interrupts.md  library_list_format.md  library_list_format_for_svr4_targets.md  memory_map_format.md  notification_packets.md  overview.md  packet_acknowledgment.md  standard_replies.md  thread_list_format.md
doc/protocol/: gdbrsp_apple.md
doc/protocol/gdb_rsp/: branch_trace_format.md  packets.md  remote_non_stop.md  remote_protocol.md  stop_reply_packets.md  traceframe_info_format.md  tracepoint_packets.md
docs/: gdbrsp_comm.md  gdbrsp_lldbext.md  gdbrsp_packets.md  gdbrsp_targetdesc.md
src/: gdbstub.hpp
src/gdbstub/: gdbstub.cpp  gdbstub.hpp  rsp_core.cpp  rsp_core.hpp  rsp_types.hpp  server.cpp  server.hpp  target.hpp  transport.hpp  transport_tcp.cpp  transport_tcp.hpp
src/gdbstub/lldb/: types.hpp
src/gdbstub/protocol/: rsp_core.cpp  rsp_types.hpp
src/gdbstub/server/: breakpoints.cpp  control.cpp  core.cpp  detail.cpp  detail.hpp  dispatch.cpp  memory.cpp  query.cpp  registers.cpp  server.hpp  stop.cpp  threads.cpp
src/gdbstub/transport/: transport_tcp.cpp  transport_tcp.hpp
src/gdbstub_tool/: main.cpp  toy_emulator.hpp
src/gdbstub_tool/toy/: layout.hpp  machine.hpp  runner.hpp  target.hpp  threads.hpp  types.hpp
test/gdbstub/: lldb_e2e_dlang_test.py  lldb_e2e_test.py  tcp_test_client.hpp  test_capi.cpp  test_gdbstub.cpp  test_server.cpp  test_toy_components.cpp  test_toy_emulator.cpp  toy_session.hpp
tests/: CMakeLists.txt  mock_target.hpp  test_helper.cpp  test_suite.py
